tests/rosetta/out/Smalltalk/catamorphism.out
/tmp/catamorphism.st:9: parse error, expected ']'
